<resources>
    <string name="app_name">Mockup</string>
    <string name="audio_question">¿Qué dijo el viejo?</string>
    <string name="validate">Validar</string>
    <string name="upload">Cargar</string>
    <string name="audio_ex1">Nunca he mirado</string>
    <string name="audio_ex2">Mi mamá aún vive</string>
    <string name="audio_ex3">Nunca lo he visto</string>
    <string name="start_audio">Empezar audio!</string>
    <string name="back">Atràs</string>
    <string name="confirm">Confirmar</string>
    <string name="audio_upload">Por favor selecciona un audio para cargar.</string>
    <string name="audio_questions">Por favor escribe preguntas para el audio.</string>
    <string name="yes">sì</string>
    <string name="no">no</string>
    <string name="audio_true_translation">Si no, por favor da la traducción correcta</string>
    <string name="audio_proposed_translation">¿Este audio traduce  \n \'nunca lo he visto\'?</string>
    <string name="image_question">¿Qué ves en la foto?</string>
    <string name="image_ex1">muxtucu</string>
    <string name="image_ex2">cuchi</string>
    <string name="image_ex3">murenü</string>
    <string name="image_upload">Por favor selecciona una foto para cargar.</string>
    <string name="image_label">Por favor da un nombre en Ticuna para la foto:</string>
    <string name="image_true_content">En dado caso que no, por favor escribe el nombre correcto</string>
    <string name="image_question_validate">¿Està imagen representa un \'cuchi\'?</string>
    <string name="image">Imagen</string>
    <string name="text">Texto</string>
    <string name="audio">Audio</string>
    <string name="text_translation">¿Cuàl es la traducción?</string>
    <string name="text_ex1">Nunca he mirado</string>
    <string name="text_ex2">Mi mamá aún vive</string>
    <string name="text_ex3">Nunca lo he visto</string>
    <string name="tikuna_sentence">Oración en Ticuna</string>
    <string name="text_request2">Por favor escribe el texto para cargar.</string>
    <string name="text_request1">Por favor da la traducción en español</string>
    <string name="text_true_translation">Si no, por favor da la traducción correcta:</string>
    <string name="text_proposed_translation">¿Esta oración traduce \n \'nunca lo he visto\'?</string>
</resources>
